--- a/dafne/src/assets/config/config.json
+++ b/dafne/src/assets/config/config.json
@@ -5,6 +5,13 @@
         "textSize": 12,
         "iconSize": 30
     },
+    "latencyColors": [
+        {"threshold": 259200, "color": "#ee0000"},
+        {"threshold": 129600, "color": "#6d4400"},
+        {"threshold": 43200, "color": "#373d00"},
+        {"threshold": 14400, "color": "#185e00"},
+        {"threshold": 0, "color": "#00781d"}  
+    ],
     "dataRefreshTime": 300000,
     "apiUrl": "<back-end-url>",
     "version": "2.0.0",
