--- a/dafne/package.json
+++ b/dafne/package.json
@@ -26,7 +26,10 @@
     "@types/jquery": "^3.5.8",
     "deck.gl": "^8.5.10",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jquery": "3.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.5.0",
     "mat-icon-import": "^0.1.1",
@@ -44,6 +47,7 @@
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jspdf": "^2.0.0",
     "@types/mapbox-gl": "^2.4.2",
     "@types/node": "^12.11.1",
     "@types/p5": "^1.3.1",
