--- a/dafne/package.json
+++ b/dafne/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.9",
-    "@angular/common": "~12.2.0",
+    "@angular/common": "^12.2.8",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
@@ -20,20 +20,17 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@deck.gl/mapbox": "^8.6.0",
     "@types/file-saver": "^2.0.3",
     "@types/geojson": "^7946.0.8",
     "@types/jquery": "^3.5.8",
-    "deck.gl": "^8.5.10",
+    "deck.gl": "^9.1.0",
     "file-saver": "^2.0.5",
     "jquery": "3.4.1",
     "jwt-decode": "^3.1.2",
-    "mapbox-gl": "^2.5.0",
     "mat-icon-import": "^0.1.1",
     "moment": "^2.29.1",
     "ng2-date-picker": "^12.0.4",
     "ngx-color-picker": "^11.0.0",
-    "ngx-mapbox-gl": "^7.1.0",
     "p5": "^1.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -44,8 +41,7 @@
     "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
-    "@types/mapbox-gl": "^2.4.2",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "@types/p5": "^1.3.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
