--- a/dafne/package.json
+++ b/dafne/package.json
@@ -25,7 +25,7 @@
     "@types/jquery": "^3.5.8",
     "deck.gl": "^9.1.0",
     "file-saver": "^2.0.5",
-    "jquery": "3.4.1",
+    "jquery": "^3.4.1",
     "jwt-decode": "^3.1.2",
     "mat-icon-import": "^0.1.1",
     "moment": "^2.29.1",
