--- a/dafne/package.json
+++ b/dafne/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/file-saver": "^2.0.3",
     "@types/geojson": "^7946.0.8",
     "@types/jquery": "^3.5.8",
+    "bootstrap": "^4.6.2",
     "deck.gl": "^9.1.0",
     "file-saver": "^2.0.5",
     "jquery": "^3.4.1",
